Tweaked z-index to avoid getting blocked by Divi loader.

--- a/src/resources/postcss/events-admin.pcss
+++ b/src/resources/postcss/events-admin.pcss
@@ -279,7 +279,7 @@
 }
 
 .ui-front {
-	z-index: 1000000;
+	z-index: 2000001;
 }
 
 .events-cal .ui-widget-overlay.ui-front {
